fix: 全体的な調整を行った
Message body

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -175,7 +175,7 @@
     <p data-aos="fade-up" data-aos-duration="1000" class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
-    <section  data-aos="fade-up" data-aos-offset="320" data-aos-easing="ease-in-sine"  data-aos-duration="1000" class="styling">
+    <section data-aos="fade-up" data-aos-duration="2000" class="styling">
       <div class="scene">
         <div id="plant" class="item"></div>
         <div id="mirror">
@@ -193,14 +193,14 @@
 
     <section>
       <div class="contents">
-        <div data-aos="fade-up" data-aos-offset="320" data-aos-easing="ease-in-sine"  data-aos-duration="1000" id="ranking" class="contentsItem ranking">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" id="ranking" class="contentsItem ranking">
           <div class="title">
             <p>人気ランキング</p>
             <p>ranking</p>
             <p class="border"></p>
           </div>
         </div>
-        <div data-aos="fade-up" data-aos-offset="320" data-aos-easing="ease-in-sine"  data-aos-duration="1000" id="newItem" class="contentsItem newItem">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" id="newItem" class="contentsItem newItem">
           <div class="title">
             <p>新作アイテム</p>
             <p>new arrival</p>
@@ -251,7 +251,7 @@
       </div>
     </section>
 
-    <section data-aos="fade-up" data-aos-offset="320" data-aos-easing="ease-in-sine"  data-aos-duration="1000" class="shops">
+    <section data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" class="shops">
       <div class="title">
         <p>実店舗</p>
         <p>shop</p>
@@ -285,7 +285,7 @@
         </div>
       </div>
       <div class="sponsor">
-        <img src="https://ezakkamania.itembox.design/item/visselkobe-320x60.png?t=20221111123711" alt="">
+        <img src="https://ezakkamania.itembox.design/item/visselkobe-350x60.png?t=20221111123711" alt="">
       </div>
     </section>
   </main>
