fix: 全体的な調整を行った
Message body

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -199,6 +199,9 @@
             <p>ranking</p>
             <p class="border"></p>
           </div>
+          <div class="contentLast">
+            <p>人気ランキングコンテンツの終わり</p>
+          </div>
         </div>
         <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="2000" id="newItem" class="contentsItem newItem">
           <div class="title">
