fix: アニメーションの追加を行った
Message body

Message footer

--- a/html/main.html
+++ b/html/main.html
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <p data-aos="fade-up" data-aos-duration="800" class="stylingMore">
+    <p data-aos="zoom-in" data-aos-duration="800" class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
     <section data-aos="fade-up" data-aos-duration="1600" class="styling">
@@ -246,7 +246,7 @@
                 </div>
               </div>
             </div>
-            <div data-aos="fade-up" data-aos-duration="800" class="more">
+            <div data-aos="zoom-in" data-aos-duration="800" class="more">
               <a href="">\ 新作アイテムをもっと見る /</a>
             </div>
           </div>
