--- a/html/main.html
+++ b/html/main.html
@@ -122,7 +122,7 @@
 
 <body>
   <main>
-    <section data-aos="fade-up" data-aos-duration="800" class="slideShow">
+    <section data-aos="fade-up" data-aos-duration="500" class="slideShow">
       <div class="wrapper">
         <span id="prev" class="prev"><i class="bi bi-chevron-left"></i></span>
         <span id="next" class="next"><i class="bi bi-chevron-right"></i></span>
@@ -151,7 +151,7 @@
       <script src="../js/slides.js"></script>
     </section>
 
-    <section data-aos="fade-up" data-aos-duration="800" class="search">
+    <section data-aos="fade-up" data-aos-duration="500" class="search">
       <div class="search_header">
         <ul>
           <li><a href="#newItem">新作<span class="hidden">アイテム</span></a></li>
@@ -172,10 +172,10 @@
       </div>
     </section>
 
-    <p data-aos="zoom-in" data-aos-duration="800" class="stylingMore">
+    <p data-aos="zoom-in" data-aos-duration="500" class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
-    <section data-aos="fade-up" data-aos-duration="1600" class="styling">
+    <section data-aos="fade-up" data-aos-duration="1000" class="styling">
       <div class="scene">
         <div id="plant" class="item"></div>
         <div id="mirror">
@@ -193,7 +193,7 @@
 
     <section>
       <div class="contents">
-        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1600" id="ranking" class="contentsItem ranking">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000" id="ranking" class="contentsItem ranking">
           <div class="title">
             <p>人気ランキング</p>
             <p>ranking</p>
@@ -203,7 +203,7 @@
             <p>人気ランキングコンテンツの終わり</p>
           </div>
         </div>
-        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1600" id="newItem" class="contentsItem newItem">
+        <div data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000" id="newItem" class="contentsItem newItem">
           <div class="title">
             <p>新作アイテム</p>
             <p>new arrival</p>
@@ -246,7 +246,7 @@
                 </div>
               </div>
             </div>
-            <div data-aos="zoom-in" data-aos-duration="800" class="more">
+            <div data-aos="zoom-in" data-aos-duration="500" class="more">
               <a href="">\ 新作アイテムをもっと見る /</a>
             </div>
           </div>
@@ -254,13 +254,13 @@
       </div>
     </section>
 
-    <section data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1600" class="shops">
+    <section data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="1000" class="shops">
       <div class="title">
         <p>実店舗</p>
         <p>shop</p>
         <p class="border"></p>
       </div>
-      <div class="shop">
+      <div data-aos="zoom-in" data-aos-duration="500" class="shop">
         <img src="https://e-zakkamania.com/theme/images/shop/shop-okamoto_1200.jpg" alt="">
         <div class="describe">
           <p class="name">zootie×fablica 神戸岡本店</p>
@@ -269,7 +269,7 @@
           <p class="time">営業時間 : 11:00-19:00</p>
         </div>
       </div>
-      <div class="shop">
+      <div data-aos="zoom-in" data-aos-duration="500" class="shop">
         <img src="https://e-zakkamania.com/theme/images/shop/shop-stylinglab_1200.jpg" alt="">
         <div class="describe">
           <p class="name">stylingLAB by e-zakkamania</p>
@@ -278,7 +278,7 @@
           <p class="time">営業時間 : 11:00-18:00</p>
         </div>
       </div>
-      <div class="shop">
+      <div data-aos="zoom-in" data-aos-duration="500" class="shop">
         <img src="https://e-zakkamania.com/theme/images/shop/shop-akita_1200.jpg" alt="">
         <div class="describe">
           <p class="name">イーザッカマニアストアーズ秋田ALS店</p>
