add: 画面遷移アニメーションの追加を行った
Message body

Message footer

--- a/html/contents.html
+++ b/html/contents.html
@@ -117,6 +117,10 @@
   <script src="../js/hamburger.js"></script>
 </header>
 
+<div class="mask">
+  <img src="../img/main-logo-black.svg" alt="サイトロゴ">
+</div>
+
 <body>
   <main>
   </main>
