--- a/html/main.html
+++ b/html/main.html
@@ -120,6 +120,10 @@
   <script src="../js/hamburger.js"></script>
 </header>
 
+<div class="mask">
+  <img src="../img/main-logo-black.svg" alt="サイトロゴ">
+</div>
+
 <body>
   <main>
     <section data-aos="fade-up" data-aos-duration="500" class="slideShow">
@@ -172,7 +176,7 @@
       </div>
     </section>
 
-    <p data-aos="zoom-in" data-aos-duration="500" class="stylingMore">
+    <p data-aos="zoom-in" data-aos-placement="top-bottom" data-aos-duration="500" class="stylingMore">
       <a href="">\ コーディネートをもっと見る /</a>
     </p>
     <section data-aos="fade-up" data-aos-duration="1000" class="styling">
@@ -246,7 +250,7 @@
                 </div>
               </div>
             </div>
-            <div data-aos="zoom-in" data-aos-duration="500" class="more">
+            <div data-aos="zoom-in" data-aos-placement="top-bottom" data-aos-duration="500" class="more">
               <a href="">\ 新作アイテムをもっと見る /</a>
             </div>
           </div>
