add: ダウンロードアイコンを追加した
Message body
画面遷移アニメーションのレイアウトを変更した

Message footer

--- a/html/contents.html
+++ b/html/contents.html
@@ -22,6 +22,9 @@
       </div>
       <nav class="globalMenuSp">
         <ul>
+          <div class="balloon3-right-btm">
+            Download !!!
+          </div>
           <div class="app">
             <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
           </div>
