--- a/html/main.html
+++ b/html/main.html
@@ -22,6 +22,9 @@
       </div>
       <nav class="globalMenuSp">
         <ul>
+          <div class="balloon3-right-btm">
+            Download !!!
+          </div>
           <div class="app">
             <a href=""><img src="https://e-zakkamania.com/contents/app/img/app_icon.png" width="80" height="80" alt=""></a>
           </div>
@@ -273,6 +276,7 @@
           <p class="time">営業時間 : 11:00-19:00</p>
         </div>
       </div>
+      <p class="border"></p>
       <div data-aos="zoom-in" data-aos-duration="500" class="shop">
         <img src="https://e-zakkamania.com/theme/images/shop/shop-stylinglab_1200.jpg" alt="">
         <div class="describe">
@@ -282,6 +286,7 @@
           <p class="time">営業時間 : 11:00-18:00</p>
         </div>
       </div>
+      <p class="border"></p>
       <div data-aos="zoom-in" data-aos-duration="500" class="shop">
         <img src="https://e-zakkamania.com/theme/images/shop/shop-akita_1200.jpg" alt="">
         <div class="describe">
@@ -291,15 +296,15 @@
           <p class="time">営業時間 : 11:00-20:00</p>
         </div>
       </div>
-      <div class="sponsor">
-        <img src="https://ezakkamania.itembox.design/item/visselkobe-350x60.png?t=20221111123711" alt="">
-      </div>
     </section>
   </main>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
+  <div class="sponsor">
+    <img src="https://ezakkamania.itembox.design/item/visselkobe-350x60.png?t=20221111123711" alt="">
+  </div>
 </body>
 
 <footer>
